[package]
name = "winrt-profile"
version = "0.1.0"
authors = ["Ryan Levick <ryan.levick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt_gen = { path = "../../work/winrt-rs/crates/gen" }
proc-macro2 = "1.0"

[profile.release]
debug = true